--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./src/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="apple-mobile-web-app-title" content="WOC" />
+    <meta name="application-name" content="WOC" />
+    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#0b1720" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Working Time App</title>
+
+    <meta name="msapplication-navbutton-color" content="#0b1720" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0b1720" />
+    <title>WOC</title>
   </head>
   <body>
     <div id="root"></div>
